chore: 路由更新后更改标题

--- a/packages/provider-app-entry/public/deploy.html
+++ b/packages/provider-app-entry/public/deploy.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport"
     content="width=DEVICE-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <meta keyword="React App Seed" />
+  <meta keyword="自定义工具 3.0" />
   <link rel="shortcut icon" type="image/png" href="./favicon.png" />
-  <title>React App Seed</title>
+  <link rel="stylesheet" href="./css/loading.cycle.css">
+  <title>自定义工具 3.0</title>
 </head>
 
 <body>
