--- a/packages/provider-app-entry/public/index.html
+++ b/packages/provider-app-entry/public/index.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport"
     content="width=DEVICE-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <meta keyword="Provider App" />
+  <meta keyword="自定义工具 3.0" />
   <link rel="shortcut icon" type="image/png" href="./favicon.png" />
   <link rel="stylesheet" href="./css/loading.cycle.css">
-  <title>Provider App</title>
+  <title>自定义工具 3.0</title>
 </head>
 
 <body>
