--- a/packages/provider-app/provider-app-entry/public/index.html
+++ b/packages/provider-app/provider-app-entry/public/index.html
@@ -19,6 +19,8 @@
     <div class="__loader"></div>
   </div>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.11.1/css/all.min.css" />
+  <script src="https://unpkg.com/@popperjs/core@2"></script>
+  <script src="https://unpkg.com/tippy.js@6"></script>
   <script id="processScript">
     (function (window) {
       window.onloadBundle = function onloadBundle() {
